--- a/src/app/forgot-password/forgot-password.component.html
+++ b/src/app/forgot-password/forgot-password.component.html
@@ -1,5 +1,5 @@
 <!-- Form of forgot password  -->
-
+<!-- 
 <div class="row">
     <div class="col-md-6 m-auto pt-5">
         <div class="card p-5">
@@ -18,4 +18,37 @@
             </form>
         </div>
     </div>
-</div>
+</div> -->
+
+
+<section class="forgot_pwd_section text-center d-flex flex-wrap align-content-center">
+    <div class="container-fluid">
+        <h3>Aso Ebi</h3>
+        <div class="forgot_password">
+            <div class="Join_inner_content_box">
+                <div class="inner_content_btn">
+                    <a routerLink="/signUp" class="btn_join_pwd float-left">Join</a>
+                    <a routerLink="/login" class="btn_enter_pwd text-white float-right">Enter</a>
+                </div>
+                <form class="join_form forgot_pwd_form " [formGroup]="forgotPasswordForm" autocomplete="off">
+                    <div class="form-group">
+                        <div class="input-group">
+                            <input type="password" class="form-control" formControlName="newPassword"
+                                placeholder="New Password">
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <div class="input-group">
+                            <input type="password" class="form-control" formControlName="confirmPassword"
+                                (input)="comparePassword(forgotPasswordForm)" placeholder="Confirm Password">
+                        </div>
+                    </div>
+                    <div class="btn_submit_pwd">
+                        <button class="btn text-white text-center submit_btn_pwd text-center" type="button" (click)="resetPassword()"
+                            [disabled]="forgotPasswordForm.invalid || isDisable">Submit</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+</section>
