--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,7 +1,6 @@
 <!-- Users header section -->
 
-<nav class="navbar navbar-expand-lg navbar-light bg-light" *ngIf="adminUser == 'user'">
-  <!-- <a class="navbar-brand" href="#">Navbar</a> -->
+<!-- <nav class="navbar navbar-expand-lg navbar-light bg-light" *ngIf="adminUser == 'user'">
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
     aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -31,8 +30,30 @@
       autocomplete="off">
     <label for="exampleForm2" style="padding-left: 15px;">Search Here</label>
   </div>
-</nav>
+</nav> -->
 
+
+<!-- <div>
+  <section class="msg_page_section d-flex flex-wrap align-content-center">
+    <div class="container-fluid">
+      <h3 class="text-center">Aso Ebi</h3>
+      <div class="msg_sec1">
+        <div class="Join_inner_content_box">
+          <div class="all_event_sec">
+            <div class="row">
+              <div class="col-3 m-auto pr-0 float-right">
+                <a><img src="/assets/images/icon1.png"></a>
+              </div>
+              <div class="col-9 p-0">
+                <span class="all_event_name"> Hello Rao Info Tech </span>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+</div> -->
 
 <!-- Admin Panel header section -->
 
