--- a/src/app/reset-password/reset-password.component.html
+++ b/src/app/reset-password/reset-password.component.html
@@ -6,17 +6,12 @@
     <span></span>
 </div>
 <!-- Form of reset password  -->
-
+<!-- 
 <div *ngIf="!isDiable">
     <div class="row">
         <div class="col-md-6 m-auto pt-5">
             <div class="card p-5">
                 <form [formGroup]="resetPasswordForm" autocomplete="off">
-
-                    <!-- <div class="form-group">
-                        <label for="email">Enter Your Email</label>
-                        <input type="text" class="form-control" formControlName="email">
-                    </div> -->
                     <div class="form-group">
                         <label for="currentPassword">currentPassword</label>
                         <input type="password" class="form-control" formControlName="currentPassword">
@@ -36,4 +31,55 @@
             </div>
         </div>
     </div>
+</div> -->
+
+
+<div>
+    <section class="reset_pwd_section d-flex flex-wrap align-content-center">
+        <div class="container-fluid">
+            <h3 class="text-center">Aso Ebi</h3>
+            <div class="reset_password">
+                <div class="Join_inner_content_box">
+                    <div class="event_inner_content">
+                        <div class="new_event_sec">
+                            <div class="row">
+                                <div class="col-3 m-auto pr-0 float-right">
+                                    <a href="#"><img src="/assets/images/reset_pwd_icon.png"></a>
+                                    <p class="text-white">Reset Password</p>
+                                </div>
+                                <div class="col-9 p-0">
+                                    <span class="text-white event_name"> Hello Rao Info Tech </span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <form class="join_form forgot_pwd_form mt-3" [formGroup]="resetPasswordForm" autocomplete="off">
+                        <div class="form-group">
+                            <div class="input-group">
+                                <input type="password" class="form-control" id="pwd3" placeholder="Current Password"
+                                    formControlName="currentPassword" name="pwd1">
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <div class="input-group">
+                                <input type="password" class="form-control" id="pwd1" placeholder="New Password"
+                                    formControlName="newPassword" name="pwd1">
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <div class="input-group">
+                                <input type="password" class="form-control" formControlName="confirmPassword"
+                                    (input)="comparePassword(resetPasswordForm)" id="pwd2"
+                                    placeholder="Confirm New Password" name="pwd2">
+                            </div>
+                        </div>
+                        <div class="btn_submit_pwd">
+                            <button class="btn text-white text-center reset_pwd_btn submit_btn_pwd text-center"
+                                (click)="resetPassword()" [disabled]="resetPasswordForm.invalid || isDisable">Submit</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </section>
 </div>
