new design of my event

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -165,7 +165,7 @@
 							</div>
 						</div>
 						<div class="btn_login">
-							<button type="submit" (click)="onSubmitLogin()" class="btn text-white in_btn"
+							<button type="button" (click)="onSubmitLogin()" class="btn text-white in_btn"
 								[disabled]="isDisable || loginForm.invalid">In</button>
 						</div>
 						<a class="text-white" data-toggle="modal" data-target="#exampleModal">forgot password ?</a>
